--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^12.2.1",
     "next": "15.0.0",
     "react": "^18",
     "react-dom": "^18"
