--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "firebase": "^12.2.1",
     "next": "15.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
